# ai-sports

./: .gitignore  README.md  pyproject.toml
src/ai_sports/: __init__.py  main.py  player_management.py
tests/: test_player_management.py  test_smoke.py
web/: README.md  app.js  index.html  styles.css
