[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sports"
version = "0.1.0"
description = "A starter Python project for AI + sports experiments"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Jeff Liu", email = "lsword999@hotmail.com" }
]

[tool.setuptools.packages.find]
where = ["src"]
